[Darwin BTLE] Fix service discovery timeout assert

If BT LE service discovery times out, an assert activates.

This happens due to the following sequence:
- DarwinBTCentralManager gets a timeout from service discovery watcher,
  which leads to 'emit notifier->CBManagerError()'
- The handler QLowEnergyControllerPrivateDarwin::_q_CBManagerError()
  sets state to 'Connected'
- A bit later the DarwinBTCentralManager emits a
  serviceDiscoveryFinished() signal, whose handler
  QLowEnergyControllerPrivateDarwin::_q_serviceDiscoveryFinished()
  asserts because state is no longer 'Discovering'

Either the assert needs to be changed to an early return, or the
service discovery should not send the finished() signal after it has
emitted an error.

Fixes: QTBUG-106039
Change-Id: Ibff31332524a2c7d20dced7b3af7af5a424db0ef
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>